dodanie tekstu i koloru tła

--- a/1-podstawowe selektory/index.html
+++ b/1-podstawowe selektory/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<!--   selektor znacznika-->
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ea molestias corporis quasi sunt voluptatem, et rem doloremque debitis minus placeat sit fugiat suscipit! Ducimus nobis neque architecto adipisci recusandae?</p>
     
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sit, velit quam nihil placeat impedit dignissimos nobis dolorem inventore mollitia!</p>
 </body>
 </html>
