drugi-paragraf-kolor

--- a/1-podstawowe-selektory/index.html
+++ b/1-podstawowe-selektory/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <!--   selektor znacznika-->
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ea molestias corporis quasi sunt voluptatem, et rem doloremque debitis minus placeat sit fugiat suscipit! Ducimus nobis neque architecto adipisci recusandae?</p>
-    
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sit, velit quam nihil placeat impedit dignissimos nobis dolorem inventore mollitia!</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ea molestias corporis quasi sunt voluptatem, et rem doloremque debitis minus placeat sit fugiat suscipit! Ducimus nobis neque architecto adipisci recusandae?</p>
+
+<!--selektor ID-->
+<p id="drugi-paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sit, velit quam nihil placeat impedit dignissimos nobis dolorem inventore mollitia!</p>
 </body>
 </html>
