--- a/1-podstawowe-selektory/index.html
+++ b/1-podstawowe-selektory/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Podstawowe style CSS</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-<!--   selektor znacznika-->
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ea molestias corporis quasi sunt voluptatem, et rem doloremque debitis minus placeat sit fugiat suscipit! Ducimus nobis neque architecto adipisci recusandae?</p>
 
-<!--selektor ID-->
-<p id="drugi-paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sit, velit quam nihil placeat impedit dignissimos nobis dolorem inventore mollitia!</p>
+<body>
+    <!--   selektor znacznika-->
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae ea molestias corporis quasi sunt voluptatem, et rem doloremque debitis minus placeat sit fugiat suscipit! Ducimus nobis neque architecto adipisci recusandae?</p>
+
+    <!--selektor ID-->
+    <p id="drugi-paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo sit, velit quam nihil placeat impedit dignissimos nobis dolorem inventore mollitia!</p>
+
+    <!--selektor klasy-->
+    <div class="akademia">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus iure illo nostrum sequi aliquid dolorem quis quasi. Quisquam, ab, provident.</div>
+
+    <!--selektor potomka-->
+    <div id="selektor-potomka">
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae iusto odit, eaque fuga quia, enim eum aperiam ducimus at voluptas.</p>
+
+        <p id="drugi-potomek">Odio quasi voluptates iste eum explicabo pariatur enim, consequuntur beatae reiciendis temporibus ducimus aliquid nulla. Non hic necessitatibus, fuga adipisci!</p>
+
+        <p>Quaerat fuga, veritatis distinctio nihil illo vel nulla tenetur hic a sapiente quia quos, officiis quas? Eius numquam eaque, natus.</p>
+
+        <p>Esse vel nesciunt itaque laudantium facere, ad sapiente deserunt odit voluptas quas quisquam doloremque rem quasi laboriosam. Dolor, laudantium esse!</p>
+        <div id="wew-div">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Officiis vitae accusantium ab nobis.</p>
+            <p>Sapiente rem natus alias laudantium.</p>
+            <p>Nisi voluptate et mollitia voluptatem.</p>
+        </div>
+    </div>
+
 </body>
+
 </html>
